--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expressive-code/plugin-collapsible-sections": "^0.40.1",
     "@expressive-code/plugin-line-numbers": "^0.40.1",
     "@tailwindcss/vite": "^4.0.3",
+    "@types/jquery": "^3.5.32",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.3",
@@ -26,6 +27,7 @@
     "astro-og-canvas": "^0.5.6",
     "astro-robots-txt": "^1.0.0",
     "canvaskit-wasm": "^0.39.1",
+    "jquery": "^3.7.1",
     "lefthook": "^1.10.10",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
